# PaintFE

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  global.json  run-web.bat
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: aur-publish.yml  ci.yml  release.yml  windows-portable.yml
packaging/appimage/: build-appimage.sh
packaging/appimage/PaintFE.AppDir/: PaintFE.desktop
packaging/aur/: PKGBUILD-bin
packaging/flatpak/: io.github.paintfe.PaintFE.desktop  io.github.paintfe.PaintFE.yml
packaging/msix/: AppxManifest.xml  build-msix.ps1
paintdotnet-host/: Directory.Build.props  README.md  publish.sh
paintdotnet-host/src/PaintDotNet.Core/: packages.lock.json
src/: app.rs  canvas.rs  cli.rs  io.rs  lib.rs  logger.rs  paintdotnet_plugins.rs  par_compat.rs  pdn.rs  theme.rs  time_compat.rs  web_bridge.rs  web_fs.rs  web_storage.rs
src/app/: bootstrap.rs  panels.rs  project_io.rs  types.rs
src/app/ops/: dialogs.rs  (+1 more)
src/canvas/: canvas_state.rs  layers.rs
src/components/: dialogs.rs  history.rs  layers.rs  palette.rs  script_editor.rs
src/config/: brushes.rs  icons.rs  keybindings.rs  settings.rs
src/document/: tiled_image.rs
src/gpu/: context.rs  renderer.rs
src/ops/: adjustments.rs  ai.rs  canvas_ops.rs  clipboard.rs  color_removal.rs  effects.rs  filters.rs  google_fonts.rs  mod.rs  print.rs  scripting.rs  shapes.rs  text.rs  text_layer.rs  transform.rs
src/render/: gpu.rs
src/services/: mod.rs
tests/: experimental_features.rs  io_roundtrip.rs  layer_ops.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: lib.rs
(+35 files in other folders)
