[package]
name = "paintfe-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = "0.35.0"
egui = "0.35.0"
paintfe = { path = "..", package = "PaintFE" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[profile.release]
opt-level = 2
